fixed titles on mobile

--- a/src/components/node/NodePanel/styles.scss
+++ b/src/components/node/NodePanel/styles.scss
@@ -1,5 +1,5 @@
 .place {
-  height: 72px;
+  // height: 72px;
   position: relative;
   z-index: 3;
   margin-top: -$radius;
