--- a/src/components/node/NodePanelInner/styles.scss
+++ b/src/components/node/NodePanelInner/styles.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: stretch;
   position: relative;
-  height: 72px;
+  // height: 72px;
   width: 100%;
   flex-direction: row;
   align-items: center;
@@ -24,13 +24,13 @@
 .content {
   flex: 0 1 $content_width;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: stretch;
   border-radius: $radius $radius 0 0;
   box-sizing: border-box;
   padding: $gap;
   background: $node_bg;
-  height: 72px;
+  // height: 72px;
 
   @include outer_shadow();
 
@@ -47,7 +47,7 @@
 .title {
   text-transform: uppercase;
   font: $font_24_semibold;
-  height: 24px;
+  // height: 24px;
   padding-bottom: 6px;
 }
 
@@ -77,6 +77,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-top: 10px;
 
   & > * {
     margin: 0 $gap;
